Fixes spacing

--- a/themes/brunoluiz/source/css/_partial/contentblocks.scss
+++ b/themes/brunoluiz/source/css/_partial/contentblocks.scss
@@ -40,6 +40,6 @@
   }
 
   .see-more {
-    margin-top: 2rem;
+    margin-top: 0rem;
   }
 }
